--- a/statefulset.yaml
+++ b/statefulset.yaml
@@ -1,20 +1,21 @@
+
 apiVersion: apps/v1
-kind: Deployment
-metadata: 
-  name: rc-game
-spec: 
-  replicas: 4
-  selector: 
-   matchLabels:
-    env: dev
+kind: StatefulSet
+metadata:
+  name: redis
+spec:
+  serviceName: redis
+  replicas: 3
+  selector:
+    matchLabels:
+      app: redis
   template:
-   metadata:
-     name: tmp-game
-     labels:
-       env: dev
-   spec:
+    metadata:
+      labels:
+        app: redis
+    spec:
       containers:
-      - name: c1
-        image: abhinagare/abhi-new-repo:v2
-        ports:
-        - containerPort: 80
+        - name: redis
+          image: redis:7.2
+          ports:
+            - containerPort: 6379
